cluster/apps/default/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name vaultwarden
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: vaultwarden/server:1.25.2-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 80
            - name: websocket
              protocol: TCP
              containerPort: 3012
          volumeMounts:
            - name: vaultwarden-config
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 10
      volumes:
        - name: vaultwarden-config
          persistentVolumeClaim:
            claimName: vaultwarden-config
