cluster/apps/default/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name vaultwarden
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
    - name: &port http
      protocol: TCP
      port: 80
      targetPort: *port
    - name: &wsport websocket
      protocol: TCP
      port: 3012
      targetPort: *wsport
  type: ClusterIP
