cluster/apps/default/vaultwarden/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name vaultwarden
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: dashboard-headers@file
      services:
        - name: *name
          port: 80
          namespace: default
    - kind: Rule
      match: Host(`vault.${SECRET_DOMAIN_0}`) && Path(`/notifications/hub`)
      middlewares:
        - name: dashboard-headers@file
      services:
        - name: *name
          port: 3012
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
